--- a/LaundryManager.API/appsettings.json
+++ b/LaundryManager.API/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source= 127.0.0.1,1433;Initial Catalog=LaundryManagerDb;User Id=sa;Password=TestDeploymentPWD01@;TrustServerCertificate=True"
-  }
+  },
+  "JwtKey": "F18AF438-23FE-4AE0-B31C-A3661164309D"
+
 }
