--- a/LaundryManager.Client/package.json
+++ b/LaundryManager.Client/package.json
@@ -30,6 +30,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^20.0.0-rc.1",
     "rxjs": "~7.8.0",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
