--- a/LaundryManager.Client/package.json
+++ b/LaundryManager.Client/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@primeuix/themes": "^1.2.1",
+    "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.0-rc.1",
     "rxjs": "~7.8.0",
